Implement lombok, and go through a massive code/warning cleanup